[tool.poetry]
name = "Python project"
version = "0.1.0"
description = ""
authors = ["Max Kivits <m.p.w.kivits@saxion.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "8.3.3"
flake8 = "7.1.2"
pyyaml = "6.0.2"
setuptools = "80.3.1"
dcf-tools = "2.4.2" 
# numpy = "^1.26.0"
# pandas = "^2.1.0"
# matplotlib = "^3.8.0"
# requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
